fixed footer issue on home page, broken on about page

--- a/src/_sass/components/_navigation.scss
+++ b/src/_sass/components/_navigation.scss
@@ -10,10 +10,11 @@
   max-width: 100px;
   max-height: 200px;
   margin: 0 auto;
-  margin-top: 120px;
+  padding-top: 120px;
   // Functioning as a sidebar instead of page-centered
   &.left-align {
     float: left;
+    padding-top:0;
     margin: 1.75em 0 0 2em;
   }
 }
